// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> renders <Form /> with an error 1`] = `
<div
  class="form__Container-sc-7952rh-0 cGcgsn"
>
  <div
    class="form__Error-sc-7952rh-1 dePsoc"
  >
    Wrong credentials.
  </div>
  <form
    class="form__Base-sc-7952rh-2 huEoKC"
  >
    <input
      class="form__Input-sc-7952rh-7 krRUWd"
      placeholder="Email address"
    />
    <input
      autocomplete="off"
      class="form__Input-sc-7952rh-7 krRUWd"
      placeholder="Password"
      type="password"
    />
    <button
      class="form__Submit-sc-7952rh-8 eEdKSg"
      type="submit"
    >
      Sign In
    </button>
  </form>
</div>
`;

exports[`<Form /> renders <Form /> with populated data 1`] = `
<div
  class="form__Container-sc-7952rh-0 cGcgsn"
>
  <h1
    class="form__Title-sc-7952rh-3 cKBDVR"
  >
    Sign In now
  </h1>
  <form
    class="form__Base-sc-7952rh-2 huEoKC"
  >
    <input
      class="form__Input-sc-7952rh-7 krRUWd"
      placeholder="Email address"
    />
    <input
      autocomplete="off"
      class="form__Input-sc-7952rh-7 krRUWd"
      placeholder="Password"
      type="password"
    />
    <button
      class="form__Submit-sc-7952rh-8 eEdKSg"
      disabled=""
      type="submit"
    >
      Sign In
    </button>
  </form>
  <p
    class="form__Text-sc-7952rh-4 fvOBTc"
  >
    New to Netflix? 
    <a
      class="form__Link-sc-7952rh-6 thCBk"
      href="/signup"
    >
      Sign up now.
    </a>
  </p>
  <p
    class="form__TextSmall-sc-7952rh-5 drVMew"
  >
    This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.
  </p>
</div>
`;
